--- a/static/stat671/hw/hw3/hw3_stat671.Rmd
+++ b/static/stat671/hw/hw3/hw3_stat671.Rmd
@@ -450,10 +450,10 @@ load_mnist <- function() {
     close(f)
     y
   }
-  train <<- load_image_file('train-images-idx3-ubyte')
-  test <<- load_image_file('t10k-images-idx3-ubyte')
-  train$y <<- load_label_file('train-labels-idx1-ubyte')
-  test$y <<- load_label_file('t10k-labels-idx1-ubyte')  
+  train <<- load_image_file('train-images.idx3-ubyte')
+  test <<- load_image_file('t10k-images.idx3-ubyte')
+  train$y <<- load_label_file('train-labels.idx1-ubyte')
+  test$y <<- load_label_file('t10k-labels.idx1-ubyte')  
 }
 show_digit <- function(arr784, col=gray(128:1/128), ...) {
   image(matrix(arr784, nrow=28)[,28:1], col=col, ...)
